[R] Cleanup.
Signed-off-by: 秋雨落 <i@rain.cx>